--- a/date/2024-05/page-4.htm
+++ b/date/2024-05/page-4.htm
@@ -121,16 +121,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-9-16-clash-node-daily-updates.htm" title="9月16日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址">9月16日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-28-free-subscribe-node.htm" title="8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-8-free-ssr-node.htm" title="10月8日→22.5M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">10月8日→22.5M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-23-clash-node.htm" title="6月23日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址">6月23日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-27-free-v2ray.htm" title="7月27日→18.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">7月27日→18.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-7-clash-windows.htm" title="3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接">3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-16-clash-node-daily-updates.htm" title="3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接">3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-9-node-share.htm" title="8月9日→18.1M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">8月9日→18.1M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-6-clash-node.htm" title="11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-11-9-free-clash.htm" title="11月9日→21.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">11月9日→21.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-13-free-shadowrocket-node.htm" title="8月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">8月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-28-free-v2ray.htm" title="4月28日→21.8M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">4月28日→21.8M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-11-clash-windows.htm" title="8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-17-node-share-links.htm" title="10月17日→21.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月17日→21.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-13-clash-v2ray-ss-ssr.htm" title="6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-14-free-subscribe-node.htm" title="9月14日→20.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">9月14日→20.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-13-free-shadowrocket-node.htm" title="7月13日→22.3M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">7月13日→22.3M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-21-free-node-subscribe-links.htm" title="10月21日→19.7M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐">10月21日→19.7M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-19-node-share.htm" title="11月19日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">11月19日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -142,7 +142,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">51</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
@@ -188,6 +188,15 @@
 				<a href="#ban" class="scroll"><img href="/assets/website/img/clashgithub/arrow.png" alt=" " class="img-responsive" /></a>
 			</div>
             <div class="col-lg-8 footer-left">
+                            <p>
+                                <a href="/">首页</a> | 
+                                <a href="/free-node/">免费节点</a> | 
+                                <a href="/news/">新闻资讯</a> |
+                                <a href="/about-us.htm">关于我们</a> |
+                                <a href="/disclaimer.htm">免责申明</a> |
+                                <a href="/privacy.htm">隐私申明</a> |
+                                <a href="/sitemap.xml">网站地图</a>
+                            </p>
                 <p class="m-0">Clash Github官方机场站 版权所有</p>
             </div>
 			<div class="copy-right-social1">
